dist folder removed from .gitignore

--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,9 @@
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
